--- a/anagrama.html
+++ b/anagrama.html
@@ -8,18 +8,15 @@
   <body>
     <link rel="stylesheet" href="style.css">
     <form action="">
-      <fieldset>
+      <div class="back">
         <div class="container">
-          <label for="palavra" class="anagrama">Anagrama</label>
-          <div class="">
-          <input type="text" name="palavra" id="palavra">
-          </div>
-          <button id="enviar" class="enviar">Enviar</button>
-          <p class="palavrasEncontradas">Palavras encontradas: </p>
-            <div class="resposta" id="resposta">
+            <label for="palavra" class="anagrama">Anagrama</label>
+            <div class="">
+            <input type="text" name="palavra" id="palavra">
             </div>
+            <button id="enviar" class="enviar">Enviar</button>
           </div>
-      </fieldset>
+      </div>
     </form>
   </body>
   <script src="./anagramaData.js"></script>
